<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chocolate"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    tools:context="com.example.henrikhoang.letsbake.MainActivity"
    tools:showIn="@layout/activity_main"
    android:paddingTop="@dimen/cake_menu_padding_top">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical"/>



</RelativeLayout>