...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading_scr_layout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iv_cake_backdrop"
        android:scaleType="centerCrop"
        tools:src="@drawable/cheese_cake"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
